# yt-dlp-Simplified

./: .gitignore  README.md  app_config.py  build.ps1  build.sh  build_command.txt  configManager.py  download.py  pyproject.toml  ui.py  update_ytdlp.py
