[project]
name = "yt-dlp-simplified"
version = "1.6.0"
description = "A simple and easy-to-use graphical user interface (GUI) for the powerful command-line video downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nuitka>=4.0.4",
    "py7zr>=1.1.0",
    "requests>=2.32.5",
    "ttkthemes>=3.3.0",
]
